--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://arkalim.netlify.app"
 languageCode: en-us
 title: Samson Ajadalu
-theme: PaperMod
+# theme = "PaperMod"
 
 menu:
   main:
