--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://your-site-url.com/"
+baseURL: "https://portfoliomain-dzg7zfqds-samson-ajadalus-projects.vercel.app/"
 languageCode: en-us
 title: "Samson Ajadalu"
 theme: "CustomPaperMod"
