--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: "https://portfoliomain-dzg7zfqds-samson-ajadalus-projects.vercel.app/"
 languageCode: en-us
 title: "Samson Ajadalu"
-theme: "CustomPaperMod"
+theme: PaperMod
 
 menu:
   main:
